feta lògica de comentaris al back
