# app/models/issue.rb
@@ -25,7 +25,7 @@ class Issue < ApplicationRecord
   has_many :comments, dependent: :destroy
   has_many :activities, dependent: :destroy
 
-  accepts_nested_attributes_for :comments, allow_destroy: true
+  # accepts_nested_attributes_for :comments, allow_destroy: true
   has_many_attached :attachments
   # --------------------------------
 
